// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array 1`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/Function",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/Function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "assets/Function/index.js": "var $logger = function(env) {
  let handle = process.env[env];
  if (!handle) {
    throw new Error(\\"Missing environment variable: \\" + env);
  }
  return $simulator.findInstance(handle);
}(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.print(...args);
exports.handler = async function(event) {
  return await new (function() {
    return class Handler {
      constructor(clients) {
        for (const [name, client] of Object.entries(clients)) {
          this[name] = client;
        }
      }
      async handle() {
        return JSON.stringify(this.my_capture);
      }
    };
  }())({
    my_capture: [\\"hello\\", \\"dude\\"]
  }).handle(event);
};
",
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Function": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.130",
              },
              "id": "Code",
              "path": "root/Function/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "Represents a function",
            "title": "Function",
          },
          "id": "Function",
          "path": "root/Function",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/Function",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "foo": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "hidden": true,
          },
          "id": "foo",
          "path": "root/foo",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`boolean 1`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/Function",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/Function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "assets/Function/index.js": "var $logger = function(env) {
  let handle = process.env[env];
  if (!handle) {
    throw new Error(\\"Missing environment variable: \\" + env);
  }
  return $simulator.findInstance(handle);
}(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.print(...args);
exports.handler = async function(event) {
  return await new (function() {
    return class Handler {
      constructor(clients) {
        for (const [name, client] of Object.entries(clients)) {
          this[name] = client;
        }
      }
      async handle() {
        return JSON.stringify(this.my_capture);
      }
    };
  }())({
    my_capture: false
  }).handle(event);
};
",
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Function": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.130",
              },
              "id": "Code",
              "path": "root/Function/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "Represents a function",
            "title": "Function",
          },
          "id": "Function",
          "path": "root/Function",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/Function",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "foo": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "hidden": true,
          },
          "id": "foo",
          "path": "root/foo",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`duration 1`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/Function",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/Function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "assets/Function/index.js": "var $logger = function(env) {
  let handle = process.env[env];
  if (!handle) {
    throw new Error(\\"Missing environment variable: \\" + env);
  }
  return $simulator.findInstance(handle);
}(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.print(...args);
exports.handler = async function(event) {
  return await new (function() {
    return class Handler {
      constructor(clients) {
        for (const [name, client] of Object.entries(clients)) {
          this[name] = client;
        }
      }
      async handle() {
        return JSON.stringify({ min: this.my_capture.minutes, sec: this.my_capture.seconds, hours: this.my_capture.hours });
      }
    };
  }())({
    my_capture: { \\"seconds\\": 7200, \\"minutes\\": 120, \\"hours\\": 2 }
  }).handle(event);
};
",
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Function": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.130",
              },
              "id": "Code",
              "path": "root/Function/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "Represents a function",
            "title": "Function",
          },
          "id": "Function",
          "path": "root/Function",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/Function",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "foo": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "hidden": true,
          },
          "id": "foo",
          "path": "root/foo",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`map 1`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/Function",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/Function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "assets/Function/index.js": "var $logger = function(env) {
  let handle = process.env[env];
  if (!handle) {
    throw new Error(\\"Missing environment variable: \\" + env);
  }
  return $simulator.findInstance(handle);
}(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.print(...args);
exports.handler = async function(event) {
  return await new (function() {
    return class Handler {
      constructor(clients) {
        for (const [name, client] of Object.entries(clients)) {
          this[name] = client;
        }
      }
      async handle() {
        return JSON.stringify({ hello: this.my_capture.hello, world: this.my_capture.world, foo: this.my_capture.foo, len: Object.keys(this.my_capture).length });
      }
    };
  }())({
    my_capture: { \\"hello\\": \\"dude\\", \\"world\\": \\"cup\\", \\"foo\\": \\"bar\\" }
  }).handle(event);
};
",
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Function": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.130",
              },
              "id": "Code",
              "path": "root/Function/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "Represents a function",
            "title": "Function",
          },
          "id": "Function",
          "path": "root/Function",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/Function",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "foo": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "hidden": true,
          },
          "id": "foo",
          "path": "root/foo",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`number 1`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/Function",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/Function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "assets/Function/index.js": "var $logger = function(env) {
  let handle = process.env[env];
  if (!handle) {
    throw new Error(\\"Missing environment variable: \\" + env);
  }
  return $simulator.findInstance(handle);
}(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.print(...args);
exports.handler = async function(event) {
  return await new (function() {
    return class Handler {
      constructor(clients) {
        for (const [name, client] of Object.entries(clients)) {
          this[name] = client;
        }
      }
      async handle() {
        return JSON.stringify(this.my_capture + 20);
      }
    };
  }())({
    my_capture: 123
  }).handle(event);
};
",
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Function": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.130",
              },
              "id": "Code",
              "path": "root/Function/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "Represents a function",
            "title": "Function",
          },
          "id": "Function",
          "path": "root/Function",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/Function",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "foo": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "hidden": true,
          },
          "id": "foo",
          "path": "root/foo",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`set 1`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/Function",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/Function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "assets/Function/index.js": "var $logger = function(env) {
  let handle = process.env[env];
  if (!handle) {
    throw new Error(\\"Missing environment variable: \\" + env);
  }
  return $simulator.findInstance(handle);
}(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.print(...args);
exports.handler = async function(event) {
  return await new (function() {
    return class Handler {
      constructor(clients) {
        for (const [name, client] of Object.entries(clients)) {
          this[name] = client;
        }
      }
      async handle() {
        return JSON.stringify({ size: this.my_capture.size, has_bang: this.my_capture.has(\\"bang\\"), has_bim: this.my_capture.has(\\"bim\\") });
      }
    };
  }())({
    my_capture: /* @__PURE__ */ new Set([\\"boom\\", \\"bam\\", \\"bang\\"])
  }).handle(event);
};
",
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Function": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.130",
              },
              "id": "Code",
              "path": "root/Function/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "Represents a function",
            "title": "Function",
          },
          "id": "Function",
          "path": "root/Function",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/Function",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "foo": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "hidden": true,
          },
          "id": "foo",
          "path": "root/foo",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`string 1`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/Function",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/Function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "assets/Function/index.js": "var $logger = function(env) {
  let handle = process.env[env];
  if (!handle) {
    throw new Error(\\"Missing environment variable: \\" + env);
  }
  return $simulator.findInstance(handle);
}(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.print(...args);
exports.handler = async function(event) {
  return await new (function() {
    return class Handler {
      constructor(clients) {
        for (const [name, client] of Object.entries(clients)) {
          this[name] = client;
        }
      }
      async handle() {
        return JSON.stringify(this.my_capture);
      }
    };
  }())({
    my_capture: \\"bam bam bam\\"
  }).handle(event);
};
",
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Function": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.130",
              },
              "id": "Code",
              "path": "root/Function/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "Represents a function",
            "title": "Function",
          },
          "id": "Function",
          "path": "root/Function",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/Function",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "foo": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "hidden": true,
          },
          "id": "foo",
          "path": "root/foo",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
